Fix vertical spacing for dmei nihul

--- a/css/layout.css
+++ b/css/layout.css
@@ -2644,6 +2644,7 @@
 
 	.bottom-outercont .bothaf-singleblk .riskblock-outer .feesouter-cont span em {
 		font-size: 32px;
+		line-height:39px;
 		min-width: 10px;
 		width: auto;
 		padding: 0 10px; }
