--- a/css/style.css
+++ b/css/style.css
@@ -3279,8 +3279,8 @@ div.drum figure {
 	float: left;
 	width: 100%;
 	max-width: 155px;
-	height: 55px;
-	line-height: 55px;
+	height: 50px;
+	line-height: 50px;
 	float: left;
 	border: 0px;
 	text-align: center;
